--- a/DSImager.Application/Views/SessionDialog.xaml
+++ b/DSImager.Application/Views/SessionDialog.xaml
@@ -7,6 +7,7 @@
         xmlns:fa="http://schemas.fontawesome.io/icons/"
         xmlns:viewModels="clr-namespace:DSImager.ViewModels;assembly=DSImager.ViewModels"
         xmlns:views="clr-namespace:DSImager.Application.Views"
+        xmlns:utils="clr-namespace:DSImager.Application.Utils"
         xmlns:converters="clr-namespace:DSImager.Application.Converters"
         xmlns:System="clr-namespace:System;assembly=mscorlib" x:TypeArguments="viewModels:SessionDialogViewModel" x:Class="DSImager.Application.Views.SessionDialog"
         mc:Ignorable="d"
@@ -15,6 +16,19 @@
         WindowStartupLocation="CenterScreen" MinWidth="760" MinHeight="440">
     <Window.Resources>
         <converters:NotNullConverter x:Key="NotNullConverter"></converters:NotNullConverter>
+        <converters:StringDoubleConverter x:Key="StringDoubleConverter"></converters:StringDoubleConverter>
+        <converters:InvertBooleanConverter x:Key="InvertBooleanConverter"></converters:InvertBooleanConverter>
+        <converters:BoolMultiConverter x:Key="BoolMultiConverter"></converters:BoolMultiConverter>
+        <Style x:Key="DisabledListItemStyle" TargetType="{x:Type TextBlock}">
+            <Style.Triggers>
+                <MultiDataTrigger>
+                    <MultiDataTrigger.Conditions>
+                        <Condition Binding="{Binding Path=Enabled, Converter={StaticResource InvertBooleanConverter}}" Value="True"></Condition>
+                    </MultiDataTrigger.Conditions>
+                    <Setter Property="Foreground" Value="Gray"></Setter>
+                </MultiDataTrigger>
+            </Style.Triggers>
+        </Style>
         <Style x:Key="SessionToolbarStyle" TargetType="{x:Type ToolBar}">
             <Setter Property="SnapsToDevicePixels" Value="True"/>
             <Setter Property="OverridesDefaultStyle" Value="True"/>
@@ -72,6 +86,14 @@
                 </Setter.Value>
             </Setter>
         </Style>
+        <Style TargetType="{x:Type fa:ImageAwesome}">
+            <Setter Property="Foreground" Value="White"/>
+            <Style.Triggers>
+                <Trigger Property="IsEnabled" Value="False">
+                    <Setter Property="Foreground" Value="#FF767676"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
     </Window.Resources>
     <Grid d:DataContext="{d:DesignInstance IsDesignTimeCreatable=True, Type={x:Type viewModels:SessionDialogViewModelDT}}" Margin="10">
         <Grid.RowDefinitions>
@@ -97,6 +119,7 @@
                 </ListBox.ItemTemplate>
             </ListBox>
             <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right" Height="25" VerticalAlignment="Top" Margin="0,5,0,0">
+                
                 <ToolBarTray Height="25">
                     <ToolBarTray.Style>
                         <Style TargetType="{x:Type ToolBarTray}">
@@ -113,13 +136,13 @@
                             </LinearGradientBrush>
                         </ToolBar.Background>
                         <Button Height="20" Width="20" BorderThickness="0" x:Name="NewSessionButton" Margin="0,0,5,0" Command="{Binding CreateNewSessionEntryCommand}">
-                            <fa:ImageAwesome Icon="FileOutlined" Foreground="White"/>
+                            <fa:ImageAwesome Icon="FileOutlined" />
                         </Button>
-                        <Button Height="20" Width="20" BorderThickness="0" x:Name="CopySessionButton" Margin="0,0,5,0" Command="{Binding CopySelectedSessionEntryCommand}">
-                            <fa:ImageAwesome Icon="Copy" Foreground="White"/>
+                        <Button Height="20" Width="20" BorderThickness="0" x:Name="CopySessionButton" Margin="0,0,5,0" Command="{Binding CopySelectedSessionEntryCommand}" IsEnabled="{Binding SelectedSession, Converter={StaticResource NotNullConverter}}">
+                            <fa:ImageAwesome Icon="Copy"/>
                         </Button>
-                        <Button Height="20" Width="20" BorderThickness="0" x:Name="DeleteSessionButton" Command="{Binding DeleteSelectedSessionEntryCommand}">
-                            <fa:ImageAwesome Icon="Close" Foreground="White"/>
+                        <Button Height="20" Width="20" BorderThickness="0" x:Name="DeleteSessionButton" Command="{Binding DeleteSelectedSessionEntryCommand}" IsEnabled="{Binding SelectedSession, Converter={StaticResource NotNullConverter}}">
+                            <fa:ImageAwesome Icon="Close"/>
                         </Button>
                     </ToolBar>
                 </ToolBarTray>
@@ -128,8 +151,16 @@
         </Grid>
 
         <StackPanel Margin="0,0,0,0" Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2" >
-            <Button Content="Start Session" Margin="0,0,0,5" />
-            <Button Content="Close" />
+            <Button Content="Start Session" Margin="0,0,0,5">
+                <Button.IsEnabled>
+                    <MultiBinding Converter="{StaticResource BoolMultiConverter}">
+                        <Binding Path="SelectedSession"></Binding>
+                        <Binding Path="SelectedSession.ImageSequences.Count"></Binding>
+                    </MultiBinding>
+                </Button.IsEnabled>
+            </Button>
+            
+            <Button Content="Close" Command="{Binding CloseCommand}" />
         </StackPanel>
         <Grid Grid.Row="1" Grid.Column="1" Margin="10,10,10,0">
             <Grid.RowDefinitions>
@@ -141,13 +172,23 @@
                     <RowDefinition Height="36"/>
                     <RowDefinition Height="36"/>
                 </Grid.RowDefinitions>
-                <TextBox Grid.Row="0" Text="{Binding SelectedSession.Name}" Margin="0,0,0,10"/>
+                <TextBox Grid.Row="0" Text="{Binding SelectedSession.Name, UpdateSourceTrigger=PropertyChanged}" Margin="0,0,0,10"/>
                 <StackPanel Grid.Row="1" Orientation="Horizontal">
                     <CheckBox Content="Pause after each sequence" HorizontalAlignment="Left" Margin="0,0,20,10"
                               IsChecked="{Binding SelectedSession.PauseAfterEachSequence}"/>
                     <Label Content="Repeat times" HorizontalAlignment="Left" VerticalContentAlignment="Center" BorderThickness="0,0,0,10"/>
                     <TextBox Margin="0,0,0,10" Width="50"
-                             Text="{Binding SelectedSession.RepeatTimes}"/>
+                             Text="{Binding SelectedSession.RepeatTimes, UpdateSourceTrigger=PropertyChanged}"
+                             >
+                        <Validation.ErrorTemplate>
+                            <ControlTemplate>
+                                <StackPanel>
+                                    <AdornedElementPlaceholder/>
+                                    <TextBlock Text="Please enter a valid integer value." Foreground="Red" Background="Black"/>
+                                </StackPanel>
+                            </ControlTemplate>
+                        </Validation.ErrorTemplate>
+                    </TextBox>
                     <CheckBox Content="Pause after each repeat" HorizontalAlignment="Left" Margin="20,0,20,10"
                               IsChecked="{Binding SelectedSession.PauseAfterEachRepeat}"/>
                 </StackPanel>
@@ -169,7 +210,7 @@
                 <ListBox Grid.Column="0" Background="#FF1E1E1E" VerticalAlignment="Stretch" Grid.Row="1" Margin="0" ItemsSource="{Binding SelectedSession.ImageSequences, UpdateSourceTrigger=PropertyChanged}" SelectedIndex="{Binding SelectedSequenceIndex}">
                     <ListBox.ItemTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{Binding Name}"></TextBlock>
+                            <TextBlock Style="{StaticResource DisabledListItemStyle}" Text="{Binding Name}"></TextBlock>
                         </DataTemplate>
                     </ListBox.ItemTemplate>
                 </ListBox>
@@ -190,13 +231,13 @@
                                 </LinearGradientBrush>
                             </ToolBar.Background>
                             <Button Height="20" Width="20" BorderThickness="0" x:Name="NewSequenceButton" Margin="0,0,5,0" Command="{Binding CreateNewSequenceEntryCommand}">
-                                <fa:ImageAwesome Icon="FileOutlined" Foreground="White"/>
+                                <fa:ImageAwesome Icon="FileOutlined"/>
                             </Button>
-                            <Button Height="20" Width="20" BorderThickness="0" x:Name="CopySequenceButton" Margin="0,0,5,0" Command="{Binding CopySelectedSequenceEntryCommand}">
-                                <fa:ImageAwesome Icon="Copy" Foreground="White"/>
+                            <Button Height="20" Width="20" BorderThickness="0" x:Name="CopySequenceButton" Margin="0,0,5,0" Command="{Binding CopySelectedSequenceEntryCommand}" IsEnabled="{Binding SelectedSequence, Converter={StaticResource NotNullConverter}}">
+                                <fa:ImageAwesome Icon="Copy"/>
                             </Button>
-                            <Button Height="20" Width="20" BorderThickness="0" x:Name="DeleteSequenceButton" Command="{Binding DeleteSelectedSequenceEntryCommand}">
-                                <fa:ImageAwesome Icon="Close" Foreground="White"/>
+                            <Button Height="20" Width="20" BorderThickness="0" x:Name="DeleteSequenceButton" Command="{Binding DeleteSelectedSequenceEntryCommand}" IsEnabled="{Binding SelectedSequence, Converter={StaticResource NotNullConverter}}">
+                                <fa:ImageAwesome Icon="Close"/>
                                 <!-- validation: http://www.codearsenal.net/2012/06/wpf-textbox-validation-idataerrorinfo.html#.Vp_Qk-aTzdE -->
                             </Button>
                         </ToolBar>
@@ -204,19 +245,30 @@
                     <!--<Button Height="25" Width="25" BorderThickness="0"></Button>-->
                 </StackPanel>
                 <TextBox Grid.Row="1" Grid.Column="1" VerticalAlignment="Top" Margin="10,0,0,0" Grid.ColumnSpan="4" Height="26"
-                         Text="{Binding SelectedSequence.Name}" IsEnabled="{Binding SelectedSequence, Converter={StaticResource NotNullConverter}}"></TextBox>
+                         Text="{Binding SelectedSequence.Name, UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding SelectedSequence, Converter={StaticResource NotNullConverter}}"></TextBox>
                 <Label Content="Exposure (s)" Grid.Column="1" HorizontalAlignment="Right" Margin="0,36,10,0" Grid.Row="1" VerticalAlignment="Top" Height="26"/>
                 <Label Content="Binning" Grid.Column="1" HorizontalAlignment="Right" Margin="0,72,10,0" Grid.Row="1" VerticalAlignment="Top" Height="26"/>
                 <Label Content="Format" Grid.Column="1" HorizontalAlignment="Right" Margin="0,108,10,0" Grid.Row="1" VerticalAlignment="Top" Height="26"/>
                 <ComboBox Grid.Column="2" Grid.Row="1" VerticalAlignment="Top" Margin="0,36,0,0" Height="26" IsEditable="True" 
                           ItemsSource="{Binding PresetExposureValues}"
-                          Text="{Binding SelectedSequence.ExposureDuration}"
-                          IsEnabled="{Binding SelectedSequence, Converter={StaticResource NotNullConverter}}"/>
+                          Text="{Binding SelectedSequence.ExposureDuration, Converter={StaticResource StringDoubleConverter}, ValidatesOnExceptions=True}"
+                          IsEnabled="{Binding SelectedSequence, Converter={StaticResource NotNullConverter}}"
+                          
+                          >
+                    <Validation.ErrorTemplate>
+                        <ControlTemplate>
+                            <StackPanel>
+                                <AdornedElementPlaceholder/>
+                                <TextBlock Text="Please enter a valid decimal value." Foreground="Red" Background="Black"/>
+                            </StackPanel>
+                        </ControlTemplate>
+                    </Validation.ErrorTemplate>
+                </ComboBox>
                 <ComboBox Grid.Column="2" Grid.Row="1" VerticalAlignment="Top" Margin="0,72,0,0" Height="26" ItemsSource="{Binding BinningModeOptions}"
-                          IsEnabled="{Binding SelectedSequence, Converter={StaticResource NotNullConverter}}">
+                          IsEnabled="{Binding SelectedSequence, Converter={StaticResource NotNullConverter}}" SelectedItem="{Binding SelectedSequence.BinXY}">
                     <ComboBox.ItemTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{Binding Value}"></TextBlock>
+                            <TextBlock Text="{Binding StringFormat={}{0}x{0}}"></TextBlock>
                         </DataTemplate>
                     </ComboBox.ItemTemplate>
                 </ComboBox>
